--- a/experience-service.yml
+++ b/experience-service.yml
@@ -30,7 +30,5 @@ management:
     web:
       exposure:
         include: "*"
-# api:
-#   customer: http://localhost:9010/api/customer
-# api:
-#   customer: http://PROFILE-SERVICE/
+api:
+  profile: http://PROFILE-SERVICE/profile
