--- a/api-gateway-service.yml
+++ b/api-gateway-service.yml
@@ -28,4 +28,4 @@ management:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
