--- a/profile-service.yml
+++ b/profile-service.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
       username: newroot
       password: root
-      url: jdbc:mysql://localhost:3306/profile
+      url: jdbc:mysql://localhost:3306/profiledb
   jpa:
     hibernate:
       ddl-auto: update
