--- a/experience-service.yml
+++ b/experience-service.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
       username: newroot
       password: root
-      url: jdbc:mysql://localhost:3306/experience
+      url: jdbc:mysql://localhost:3306/experiencedb
   jpa:
     hibernate:
       ddl-auto: update
