--- a/education-service.yml
+++ b/education-service.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
       username: newroot
       password: root
-      url: jdbc:mysql://localhost:3306/education
+      url: jdbc:mysql://localhost:3306/educationdb
   jpa:
     hibernate:
       ddl-auto: update
