--- a/profile-service.yml
+++ b/profile-service.yml
@@ -2,7 +2,8 @@ spring:
   datasource:
       username: newroot
       password: root
-      url: jdbc:mysql://localhost:3306/profiledb
+      url: jdbc:mysql://${DB_HOST:localhost}:3306/account?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Turkey
+      # jdbc:mysql://localhost:3306/account
   jpa:
     hibernate:
       ddl-auto: update
@@ -22,13 +23,13 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
       serviceUrl:
-        defaultZone: http://localhost:8761/eureka/ 
+        defaultZone: http://localhost:8761/eureka 
 customProperty:
   test: manasa
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
- # api:
- #   user: http://USER-SERVICE/user
+        include: refresh, health
+api:
+  customer: http://USER-SERVICE/user
