--- a/api-gateway-service.yml
+++ b/api-gateway-service.yml
@@ -18,6 +18,10 @@ spring:
           uri: lb://EXPERIENCE-SERVICE
           predicates:
             - Path= /experience/**
+        - id: AUTH-SERVICE
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path= /authenticate/**
 server:
   port: 9292
 management:
