--- a/api-gateway-service.yml
+++ b/api-gateway-service.yml
@@ -33,3 +33,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+jwt:
+  secret: mySecretKey
+  expireMs: 120000
+  refrEshexpireMs: 120000
