--- a/api-gateway-service.yml
+++ b/api-gateway-service.yml
@@ -35,5 +35,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 jwt:
   secret: mySecretKey
-  expireMs: 120000
-  refrEshexpireMs: 120000
+  expireMs: 12000000
+  refrEshexpireMs: 12000000
